# combinatorics

./: powerpy.py  powerseries.py
go/partition/: .gitignore  go.mod  main.go
haskell/: .gitignore  combinatorics.cabal  pset.py  stack.yaml
haskell/lib/: PowerSeries.hs
javascript/: multisets.js  set-partitions.js
ocaml/: dune-project
ocaml/lib/: constructions.ml  constructions.mli  dune  series.ml  series.mli  series_intf.mli
ocaml/test/: dune
rust/partitions-bell-triangle/: .gitignore  Cargo.toml
rust/partitions-bell-triangle/src/: main.rs
rust/partitions-lexico/: Cargo.toml
rust/partitions-lexico-stateless/: Cargo.toml
rust/partitions-lexico-stateless/src/: main.rs
rust/partitions-lexico/src/: main.rs
rust/partitions-restricted-growth/: Cargo.toml
rust/partitions-restricted-growth/src/: main.rs
rust/partitions-rgs-graycode/: Cargo.toml
rust/partitions-rgs-graycode-ehrlich/: Cargo.toml
rust/partitions-rgs-graycode-ehrlich/src/: main.rs
rust/partitions-rgs-graycode/src/: main.rs
rust/partitions-stirling/: Cargo.toml
rust/partitions-stirling/src/: main.rs
