cabal-version: 3.0
name:          combinatorics
version:       0.1.0

library
  build-depends:    base >=4.18 && <5
  default-language: Haskell2010
  exposed-modules:  PowerSeries
  hs-source-dirs:   lib

executable combinatorics
  build-depends:
    , base         >=4.18 && <5
    , combinatorics

  default-language: Haskell2010
  hs-source-dirs:   bin
  main-is:          Main.hs
